--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,14 @@ authors = ["dudeman"]
 edition = "2018"
 
 [lib]
+# crate-type = ["rlib"]
 crate-type = ["cdylib", "rlib"]
 
 #[features]
 #default = ["console_error_panic_hook"]
 
 [dependencies]
+# rand = "*"
 wasm-bindgen = "0.2.63"
 js-sys = "0.3.57"
 
